# chickenstats

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  chickenstats_env.yaml  cliff.toml  latest  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  tox-build.ini  tox-local 2.ini  tox-local.ini  tox.ini  versions.json  zensical.toml
.1./: 404.html  index.html  objects.inv  sitemap.xml  tags.json
.1./assets/javascripts/: bundle.b71cdcd1.min.js
.1./blog/: index.html
.1./contribute/contribute/: index.html
.1./contribute/known_issues/: index.html
.1./contribute/roadmap/: index.html
.1./guide/guide/: index.html
.1./reference/reference/: index.html
.1./search/: search_index.json
.1./stylesheets/: extra.css
.1./xg_model/overview/: index.html
.1./xg_model/xg_model/: index.html
.cache/plugin/optimize/: manifest 2.json  manifest.json
.github/: codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  check_version.yml  dependency-review.yml  dev_docs.yml  development-docs.yml  docs-testing.yml  docs.yml  lint.yml  lint_format.yml  lint_format_test.yml  new_release.yaml  publish.yml  python-app.yml  requirements.yml  tests-testing.yml  tests.yml  tests3.yml  update-docs-mkdocs.yml  update-docs.yml
1.7/: 404.html  index.html  objects.inv  sitemap.xml  tags.json
1.7.5/: 404.html  index.html  sitemap.xml
1.7.5/assets/javascripts/: bundle.8e8db93a.min.js
1.7.5/blog/: index.html
1.7.5/contribute/contribute/: index.html
1.7.5/contribute/known_issues/: index.html
1.7.5/contribute/roadmap/: index.html
1.7.5/guide/guide/: index.html
1.7.5/home/getting_started/: index.html
1.7.5/home/help/: index.html
1.7.5/reference/reference/: index.html
1.7.5/search/: search_index.json
1.7.5/xg_model/overview/: index.html
1.7.5/xg_model/xg_model/: index.html
1.7.6/: 404.html  index.html  sitemap.xml
1.7.6/blog/: index.html
1.7.6/blog/blog/: index.html
1.7.6/contribute/contribute/: index.html
1.7.6/contribute/known_issues/: index.html
1.7.6/contribute/roadmap/: index.html
1.7.6/guide/guide/: index.html
1.7.6/home/getting_started/: index.html
1.7.6/home/help/: index.html
1.7.6/reference/reference/: index.html
1.7.6/search/: search_index.json
1.7.6/xg_model/overview/: index.html
1.7.6/xg_model/xg_model/: index.html
1.7.7/: 404.html  index.html  sitemap.xml
1.7.7/assets/javascripts/: bundle.8e8db93a.min.js
1.7.7/blog/: index.html
1.7.7/contribute/contribute/: index.html
1.7.7/contribute/known_issues/: index.html
1.7.7/contribute/roadmap/: index.html
1.7.7/guide/guide/: index.html
1.7.7/home/getting_started/: index.html
1.7.7/home/help/: index.html
1.7.7/reference/reference/: index.html
1.7.7/xg_model/overview/: index.html
1.7.7/xg_model/xg_model/: index.html
1.7.8/: 404.html  index.html  sitemap.xml
1.7.8/assets/javascripts/: bundle.8e8db93a.min.js
1.7.8/blog/: index.html
1.7.8/contribute/contribute/: index.html
1.7.8/contribute/known_issues/: index.html
1.7.8/contribute/roadmap/: index.html
1.7.8/guide/guide/: index.html
1.7.8/home/getting_started/: index.html
1.7.8/home/help/: index.html
1.7.8/reference/reference/: index.html
1.7.8/search/: search_index.json
1.7.8/xg_model/overview/: index.html
1.7.8/xg_model/xg_model/: index.html
1.7/assets/javascripts/: bundle.0d59af3e.min.js  bundle.10a6bb14.min.js  bundle.10eaffea.min.js  bundle.1135ae9f.min.js  bundle.203fd0bc.min.js  bundle.4a1b0f67.min.js  bundle.5a789024.min.js  bundle.5c86578b.min.js  (+12 more)
1.7/blog/: index.html
1.7/overrides/: main.html
1.7/search/: search_index.json
1.7/stylesheets/: extra.css
chickenstats/capfriendly/: __init__.py  capfriendly.py  helpers.py  scrape.py
chickenstats/chicken_nhl/: __init__.py  fixes.py  helpers.py  info.py  scrape.py  scrape2.py  scrape_fixes.py  scrape_functions.py  stats.py  tutorials.py  validation.py  xg.py  xg_model.py
chickenstats/evolving_hockey/: __init__.py  base.py  evolving_hockey_base.py  stats.py  validation.py
chickenstats/utilities/: utilities.py
docs/: index.md  llms.txt
docs/blog/: .authors.yml  index.md
docs/contribute/: .meta.yml  contribute.md  index.md  known_issues.md  non_public.md  nonpublic.md  roadmap.md
docs/guide/: .meta.yml  getting_started.md  guide.md  index.md
docs/home/: getting_started.md  help.md
docs/overrides/: main.html
docs/reference/: index.md  reference.md
docs/stylesheets/: extra.css  outdated_admonition.css
docs/xg_model/: index.md  overview.md  xg_model.md
echo "$(git describe --tags --abbrev=0 | tr -d "v")"/: 404.html  index.html  sitemap.xml
examples/: .env.example  scrape_all.py
examples/scraping/: scrape_all.py
examples/tutorials/: tutorials.py
latest/: 404.html  index.html  sitemap.xml
overrides/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/blog/: index.html
site/search/: search_index.json
src/chickenstats/: __init__.py  exceptions.py
tests/: conftest.py
tests/tests_api/: test_api.py  test_api_limits.py  test_api_utils.py
tests/tests_capfriendly/: test_scrape_cf.py
tests/tests_chicken_nhl/: test_aggregation.py  test_corrections.py  test_fixes.py  test_game.py  test_helpers.py  test_mock_scraper.py  test_player.py  test_scrape.py  test_scraper.py  test_scraper_persist.py  test_season.py  test_team.py  test_validation.py  test_viz.py  test_xg.py
tests/tests_evolving_hockey/: test_stats 2.py  test_stats.py
tests/tests_utilities/: test_utilities.py
tutorials/rink_maps/: rink_maps.ipynb
xg_model/: .env.example  compute_rolling_stats.py  experiments.py  finalize_base_xg.py  finalize_env_xg.py  finalize_inf_xg.py  process_data.py  process_data_base.py  process_data_env.py  process_data_inf.py  scrape_data.py  xg.py
xg_model/0_1_4/: experiments.py  process_data.py  xg.py
xg_model/rapm/: process_stints.py  regressions.py
(+366 files in other folders)
