[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chickenstats"
version = "1.7.9.11"
description = "A Python package for scraping & analyzing sports statistics"
authors = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
maintainers = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
readme = "README.md"
repository = "https://github.com/chickenandstats/chickenstats"
documentation = "https://www.chickenstats.com"
license = "GPL-3.0-only"
requires-python = ">=3.10"
packages = [{include = "src/chickenstats"},
            {include = "src/chickenstats/chicken_nhl"},
            {include = "src/chickenstats/evolving_hockey"},]
include = ["src/chickenstats/chicken_nhl/xg_models/*.json",
            "src/chickenstats/chicken_nhl/utilities/styles/*.mplstyle",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "geopandas>=1.0.1",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "numpy<2.1",
    "pandas>=2.2.2",
    "pandera>=0.20.4",
    "pydantic>=2.9.0",
    "requests>=2.32.3",
    "rich>=13.8.0",
    "scikit-learn<1.6.0",
    "shapely>=2.0.6",
    "unidecode>=1.3.8",
    "xgboost>=2.1.1",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    { "include-group" = "docs"},
    { "include-group" = "tests"},
    { "include-group" = "api"},
    { "include-group" = "mlflow"},
    { "include-group" = "plotting"},
    "jupyter>=1.1.1",
    "ruff>=0.6.4",
]
docs = [
    "black>=24.8.0",
    "mike>=2.1.3",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-macros-plugin>=1.2.0",
    "mkdocs-material[imaging]>=9.5.34",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.11.1",
]
tests = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "tox-gh>=1.3.3",
    "tox>=4.18.1",
    "coverage>=7.6.9",
]
api = [
    "boto3>=1.35.14",
    "caddy>=1.3.2",
    "cronitor>=4.7.1",
    "fastapi>=0.114.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
]
mlflow = [
    "mlflow>=2.16.0",
    "optuna>=4.0.0",
    "shap>=0.46.0",
    "yellowbrick>=1.5",
]
plotting = [
    "hockey-rink>=1.0.3",
    "networkx>=3.4.2",
    "seaborn>=0.13.2",
]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/chickenstats/**/*.py",
    "tests/**/*.py"
    ]
extend-include = ["*.ipynb"]
exclude = [
    "*__init__.py",
    ]
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["D"]
fixable = ["ALL"]
ignore = ["F401", "D100"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
minversion = 7.0

[tool.coverage.run]
relative_files = true
