[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chickenstats"
version = "1.8.0"
description = "A Python package for scraping & analyzing sports statistics"
keywords = ["nhl", "hockey", "scraper", "statistics", "sports", "data", "analytics"]
authors = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
maintainers = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "narwhals>=2.15.0",
    "numpy>=2.1",
    "pandera>=0.20.4",
    "pillow>=10.0.0",
    "polars>=1.22.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.8.0",
    "unidecode>=1.3.8",
    "chickenstats_api>=0.1.4",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://www.chickenstats.com"
Repository = "https://github.com/chickenandstats/chickenstats"
Documentation = "https://www.chickenstats.com"
"Bug Tracker" = "https://github.com/chickenandstats/chickenstats/issues"

[project.optional-dependencies]
plotting = [
  "bokeh>=3.6.3",
  "hockey-rink>=1.0.3",
  "matplotlib>=3.9.2",
  "networkx>=3.4.2",
  "plotly>=6.0.0",
  "seaborn>=0.13.2",
]
pandas = [
    "pandas>=2.2.2",
]
pyarrow = [
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    { "include-group" = "tests"},
    { "include-group" = "package"},
]
package = [
    "ipython>=8.38.0",
    "jupyter>=1.1.1",
    "ruff>=0.6.4",
    "pre-commit>=4.0.1",
    "clean-dotenv>=0.0.7",
    "ty>=0.0.11",
]
docs = [
    "zensical>=0.0.10",
    "mkdocstrings-python>=1.11.1",
    "black>=24.8.0",
    "mdformat-ruff>=0.1.3",
    "nb-clean>=4.0.1",
    "nbconvert>=7.16.4",
]
tests = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "tox-gh>=1.3.3",
    "tox>=4.18.1",
    "coverage>=7.6.9",
    "pytest-xdist>=3.8.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "pillow>=10.0.0",
    "pyarrow>=22.0.0",
]

[tool.hatch.build]
include = [
    "src/chickenstats/py.typed",
    "src/chickenstats/chicken_nhl/score_adjustments/*.pkl.gz",
    "src/chickenstats/utilities/styles/*.mplstyle",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    "examples/",
    "xg_model/",
    "assets/",
]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/chickenstats/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py"
    ]
extend-include = ["*.ipynb"]
exclude = [
    "*__init__.py",
    ]
target-version = "py310"
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D", "UP", "B"]
fixable = ["ALL"]
ignore = ["F401", "D100", "B017", "B007", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"examples/blog/monte_carlo/monte_carlo.py" = ["B023"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
minversion = 7.0
filterwarnings = [
    "default",
]
markers = [
    "regression: fix-specific historical games; run explicitly with -m regression",
    "live: integration tests that require a live chickenstats API endpoint and credentials",
    "pandas: test requires pandas installed",
    "pyarrow: test requires pyarrow installed",
    "matplotlib: test requires matplotlib installed",
    "pil: test requires pillow installed",
]
addopts = "-n auto --dist loadscope --cov=src/chickenstats --cov-branch"

[tool.coverage.run]
source = ["chickenstats"]
relative_files = true
parallel = true
data_file = ".coverage"

[tool.coverage.paths]
source = [
    "src/chickenstats",
    ".tox/*/lib/python*/site-packages/chickenstats",
    ".tox/*/site-packages/chickenstats",
]

[tool.coverage.report]
fail_under = 90
exclude_also = [
    # Comments to turn coverage on and off:
    "no cover: start(?s:.)*?no cover: stop",
    ]

[tool.tox]
min_version = "4.0"
env_list = ["{py310,py311,py312,py313}-{lin,mac,win}"]

[tool.tox.env_run_base]
labels = ["ci"]
skip_install = false
platform = {lin = "linux", mac = "darwin", win = "win32"}
pass_env = ["*"]
set_env = {COVERAGE_FILE = ".coverage.{env_name}", CHICKENSTATS_USERNAME = "{env:CHICKENSTATS_USERNAME}", CHICKENSTATS_PASSWORD = "{env:CHICKENSTATS_PASSWORD}"}
commands = [["pytest", "-m", "not live", "{posargs}", "--cache-clear"]]
package = "editable"
dependency_groups = ["tests"]

[tool.tox.env.clean]
platform = ".*"
labels = ["local"]
description = "Erase previous coverage data"
deps = ["coverage"]
skip_install = true
commands = [["coverage", "erase"]]

[tool.tox.env.py313-local]
platform = ".*"
labels = ["local"]
description = "Run local test suite with coverage"
package = "editable"
depends = ["clean"]
dependency_groups = ["tests"]
commands = [["pytest", "-m", "not regression and not live", "{posargs:tests}", "--cov-append"]]

[tool.tox.env.report]
platform = ".*"
labels = ["local"]
description = "Generate final coverage report"
deps = ["coverage"]
skip_install = true
depends = ["py313-local"]
commands = [["coverage", "report"], ["coverage", "html"]]

[tool.tox.gh]
python = {"3.10" = ["py310"], "3.11" = ["py311"], "3.12" = ["py312"], "3.13" = ["py313"]}

[tool.uv.extra-build-dependencies]
caddy = ["setuptools>=40.8.0"]

[tool.git-cliff.changelog]
header = """
# Changelog\n
"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}**{{ commit.scope }}**: {% endif %}\
          {{ commit.message | upper_first }}\
          {% if commit.body %}\n  {{ commit.body | trim }}{% endif %}\
    {% endfor %}
{% endfor %}\n
"""
footer = ""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
protect_breaking_commits = true
commit_parsers = [
  { message = "\\[skip ci\\]", skip = true },
  { message = "^feat!|^fix!|BREAKING CHANGE", group = "Breaking Changes" },
  { message = "^feat", group = "Features" },
  { message = "^fix", group = "Bug Fixes" },
  { message = "^perf", group = "Performance" },
  { message = "^refactor", group = "Refactor" },
  { message = "^docs", group = "Documentation" },
  { message = "^test", group = "Testing" },
  { message = "^build", group = "Build" },
  { message = "^ci", group = "CI/CD" },
  { message = "^style", group = "Styling" },
  { message = "^chore", group = "Miscellaneous" },
]
filter_commits = true
tag_pattern = "v[0-9].*"
topo_order = false
sort_commits = "oldest"

[tool.uv.sources]
chickenstats_api = { workspace = true }
